%% State machine diagram in mermaid js format (mmd)
%% http://mermaid-js.github.io/mermaid/
%%
%% Line breaks are not fully supported. Use div elements as a workaround. Notes
%% can't be multiple lines either (note left of state ... end note)
%%
%% Create red-button-machine.state-diagram.svg with this command:
%% `npm run mmdc -- --input red-button-machine.state-diagram.mmd --output red-button-machine.state-diagram.svg`
%% Add `-p puppeteer.config.json` for sandbox workaround if needed.


stateDiagram-v2
  [*] --> up
  note right of [*] : <dl><dt>context</dt><dd>id {String}</dd><dd>responseTime {Int}</dd><dd>lights {Array of booleans}</dd></dl>
  note left of up : <ul><li>entry / set default context</li><li>entry / updateButton</li><li>entry / randomStart</li></ul>
  up --> fail : <div>BUTTON_CLICKED</div> <ul><li>do / set responseTime context</li><li>do / setLights</li><li>do / updateButton</li><li>do / sendError</li></ul>
  down --> up : <div>BUTTON_CLICKED</div> <ul><li>do / updateButton</li>
  up --> ready : <div>START</div> <ul><li>do / set lights context</li><li>do / setLights</li><li>do / startTimer</li></ul>
  note right of down : <ul><li>entry / set lights context</li></ul>
  ready --> down : <div>BUTTON_CLICKED</div> <ul><li>do / set responseTime context</li><li>do / stopTimer</li><li>do / updateButton</li></ul>
  fail --> [*]
